<resources>
    <string name="app_name">Centen Pizza Co.</string>
    <string name="hello_main">Hello!</string>
    <string name="centen_pizza_logo">Centen Pizza Logo</string>
    <string name="str_orderButton">What are you going to order today?</string>
    <string name="str_friends_sharing_pizza">Friends sharing pizza</string>
    <string name="str_canadian_pizza">Canadian Pizza</string>
    <string name="str_chicken_caesar_pizza">Chicken Caesar Pizza</string>
    <string name="str_hawaiian_pizza">Hawaiian Pizza</string>
    <string name="str_smokey_maple_bacon">Smokey Maple Bacon</string>
    <string name="str_veggie_lovers">Veggie Lovers</string>
    <string name="title_activity_pizza_details">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="str_desc_pizza_images">pizza images</string>
    <string name="src_pizza_image">Pizza Image</string>
    <string name="str_back_button">Back Button</string>
    <string name="str_add_to_cart">Add to Cart</string>
    <string name="str_sample_toppings">Bacon, Gouda Cheese, Mozzarella Cheese, Jalapenos</string>
    <string name="str_sample_pizza_name">Smokey Maple Bacon</string>
    <string name="str_sample_price">$12.49</string>
    <string name="str_dollar">$</string>
    <string name="str_thick_crust">Thick Crust</string>
    <string name="str_thin_crust">Thin Crust</string>
    <string name="str_order_summary">Order Summary</string>
    <string name="str_add_another_pizza_button">Add another pizza button</string>
    <string name="str_medium">Medium</string>
    <string name="str_remove_from_cart">Remove from cart</string>
    <string name="str_select_payment">Select Payment</string>
    <string name="str_total_price_12_49">Total Price: $12.49</string>
    <string name="str_total_price">Total Price: $</string>
    <string name="str_cardholder_name">Cardholder Name</string>
    <string name="str_card_number">Card Number</string>
    <string name="str_expiry">Expiry</string>
    <string name="str_cvv">CVV</string>
    <string name="str_next">Next</string>
    <string name="str_name">Name</string>
    <string name="str_street">Street</string>
    <string name="str_favourite_topping">Favourite Topping</string>
    <string name="str_favourite_pizza">Favourite Pizza</string>
    <string name="str_email">Email</string>
    <string name="str_phone">Phone</string>
    <string name="str_postal_code">Postal Code</string>
    <string name="str_city">City</string>
    <string name="str_loading">Loading...</string>
    <string name="str_home">Home</string>
    <string name="str_order_details">Order Details</string>
    <string name="str_customer_details">Customer Details</string>
    <string name="str_billing_details">Billing Details</string>
    <string name="str_order_success_image">Order Success Image</string>
    <string name="str_paid_by_cash">Paid by cash</string>
    <string name="str_payment_type">Payment Type</string>
    <string-array name="pizzaSizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>

</resources>