<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F8"
        tools:context=".OrderSuccessActivity">


        <TextView
            android:id="@+id/success_totalPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/cmgsans_regular"
            android:gravity="center"
            android:text="@string/str_total_price_12_49"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_Expiry" />

        <Button
            android:id="@+id/success_homeButton"
            android:layout_width="349dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/custom_button_main"
            android:fontFamily="@font/cmgsans_medium"
            android:onClick="successHomeClicked"
            android:text="@string/str_home"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_totalPrice" />

        <ImageView
            android:id="@+id/success_image"
            android:layout_width="357dp"
            android:layout_height="239dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/str_order_success_image"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/order_success_illustration" />

        <TextView
            android:id="@+id/success_orderDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cmgsans_bold"
            android:text="@string/str_order_details"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/success_image"
            app:layout_constraintStart_toStartOf="@+id/success_image"
            app:layout_constraintTop_toBottomOf="@+id/success_image" />

        <TextView
            android:id="@+id/success_pizzaTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cmgsans_medium"
            android:text="@string/str_smokey_maple_bacon"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_orderDetails" />

        <TextView
            android:id="@+id/success_pizzaSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cmgsans_medium"
            android:text="@string/str_medium"
            android:textSize="16sp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/success_pizzaTitle"
            app:layout_constraintTop_toBottomOf="@+id/success_pizzaTitle" />

        <TextView
            android:id="@+id/success_pizzaCrust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/cmgsans_medium"
            android:text="@string/str_thin_crust"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/success_pizzaSize"
            app:layout_constraintStart_toEndOf="@+id/success_pizzaSize" />

        <TextView
            android:id="@+id/success_pizzaToppings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/cmgsans_medium"
            android:text="@string/str_sample_toppings"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_pizzaSize" />

        <TextView
            android:id="@+id/success_customerDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cmgsans_bold"
            android:text="@string/str_customer_details"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_pizzaToppings" />

        <TextView
            android:id="@+id/success_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cmgsans_medium"
            android:text="@string/str_name"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_customerDetails" />

        <TextView
            android:id="@+id/success_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cmgsans_medium"
            android:text="@string/str_street"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_name" />

        <TextView
            android:id="@+id/success_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cmgsans_medium"
            android:text="@string/str_city"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/success_street"
            app:layout_constraintTop_toBottomOf="@+id/success_name" />

        <TextView
            android:id="@+id/success_postalCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cmgsans_medium"
            android:text="@string/str_postal_code"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_street" />

        <TextView
            android:id="@+id/success_Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cmgsans_medium"
            android:text="@string/str_phone"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_postalCode" />

        <TextView
            android:id="@+id/newSuccessEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cmgsans_medium"
            android:text="@string/str_email"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_Phone" />

        <TextView
            android:id="@+id/success_billingDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cmgsans_bold"
            android:text="@string/str_billing_details"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_favTopping" />

        <TextView
            android:id="@+id/success_cardholderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cmgsans_medium"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_billingDetails" />

        <TextView
            android:id="@+id/success_cardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cmgsans_medium"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_cardholderName" />

        <TextView
            android:id="@+id/success_Expiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cmgsans_medium"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_cardNumber" />

        <TextView
            android:id="@+id/success_favPizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cmgsans_medium"
            android:text="@string/str_favourite_pizza"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newSuccessEmail" />

        <TextView
            android:id="@+id/success_favTopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cmgsans_medium"
            android:text="@string/str_favourite_topping"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_favPizza" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>