<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F8"
    tools:context=".CardDetailsActivity">

    <EditText
        android:id="@+id/txt_cardholderName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_text_view"
        android:ems="10"
        android:hint="@string/str_cardholder_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_cardNumber"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_text_view"
        android:ems="10"
        android:hint="@string/str_card_number"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cardholderName" />

    <EditText
        android:id="@+id/txt_expiryDate"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_text_view"
        android:ems="10"
        android:hint="@string/str_expiry"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/txt_cvv"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cardNumber" />

    <EditText
        android:id="@+id/txt_cvv"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_text_view"
        android:ems="10"
        android:hint="@string/str_cvv"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toBottomOf="@+id/txt_expiryDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_expiryDate"
        app:layout_constraintTop_toTopOf="@+id/txt_expiryDate" />

    <TextView
        android:id="@+id/txt_totalPriceCardDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/cmgsans_regular"
        android:text="@string/str_total_price_12_49"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/card_nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:onClick="nextCardDetailsClicked"
        android:id="@+id/card_nextButton"
        android:layout_width="349dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_button_main"
        android:fontFamily="@font/cmgsans_medium"
        android:text="@string/str_next"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>